--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ function CSVToArray( strData, strDelimiter ){
             map: map,
             icon: image,
             shape: shape,
-            title: data[i][0],
+            title: "+data[i][0]+",
             //zIndex: beach[3]
           });
         }
